add: 添加图片和样式优化

--- a/src/App.less
+++ b/src/App.less
@@ -29,5 +29,22 @@
   width: 100%;
   margin: .625rem auto 0;
   background: linear-gradient(88.16deg, #F8A62F 0%, #FB6721 100%);
-  border-radius: 1rem;
+  border-radius: 2rem;
+  height: 2.5rem;
+  color: #fff;
+  font-size: .9rem;
+}
+button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  margin: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: none;
+}
+button::-moz-focus-inner {
+  border: none;
+  padding: 0;
 }
