--- a/src/pages/Deisgn/index.less
+++ b/src/pages/Deisgn/index.less
@@ -7,7 +7,7 @@
     overflow-y: scroll;
     header{
         flex: 0;
-        padding:1.5rem;
+        padding:0 1.1rem 1.1rem 1.1rem ;
         box-sizing: border-box;
 
         .title{
@@ -16,7 +16,12 @@
         }
         .btn{
             width: 100%;
-            margin: .625rem auto 0;
+            margin: .925rem auto 0;
+            .png{
+                width: 1.25rem;
+                height: 1.25rem;
+                vertical-align: sub;
+            }
         }
     }
     
@@ -29,6 +34,15 @@
         .title{
             padding: 1.2rem 0;
             font-size: 1.2rem;
+            .text{
+                font-size: 1rem;
+            }
+            .dressBtn{
+                border: 1px solid #000;
+                border-radius: .3125rem;
+                font-size: .8rem;
+                padding: .1875rem .5125rem;
+            }
         }
     }
 }
