add: 添加图片和样式优化

--- a/src/App.less
+++ b/src/App.less
@@ -5,6 +5,9 @@
   --adm-color-primary:  #FA8728;
   --adm-button-border-style: #FA8728;
 }
+body{
+  background-color: #fff;
+}
 .app {
   height: 100vh;
   display: flex;
