--- a/src/pages/Generate/index.less
+++ b/src/pages/Generate/index.less
@@ -13,14 +13,17 @@
     }
     main{
         width: 100%;
-        height: 50vh;
+        height: calc(50vh - 10px);
         overflow-y: auto;
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(6.25rem, 1fr)); /* 或使用固定值如 1fr 1fr 1fr */  
-        grid-template-rows: repeat(auto-fill, minmax(6.25rem, 1fr)); /* 与列设置相同，确保高宽一致 */ 
-        grid-gap: .125rem; 
-        box-sizing: border-box;
+        .images-box{
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(6.25rem, 1fr)); /* 或使用固定值如 1fr 1fr 1fr */  
+            grid-template-rows: repeat(auto-fill, minmax(6.25rem, 1fr)); /* 与列设置相同，确保高宽一致 */ 
+            grid-gap: .125rem; 
+            box-sizing: border-box;
+        }
         .imgagesList{
+            height: 120px;
             overflow: hidden;
         }
         
