--- a/src/components/CameraCapture/index.less
+++ b/src/components/CameraCapture/index.less
@@ -52,8 +52,8 @@
 
 .video-container video{
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: 100vh;
+    // object-fit: cover;
 }
 
 .video-container .video-controls{
