--- a/src/components/CameraCapture/index.less
+++ b/src/components/CameraCapture/index.less
@@ -53,7 +53,7 @@
 .video-container video{
     width: 100%;
     height: 100vh;
-    // object-fit: cover;
+    object-fit: cover;
 }
 
 .video-container .video-controls{
