--- a/src/components/CameraCapture/index.less
+++ b/src/components/CameraCapture/index.less
@@ -26,8 +26,8 @@
         justify-content: center;
         align-items: center;
         .btn{
-            width: 40px;
-            height: 40px;
+            width: 3.75rem;
+            height: 3.75rem;
             border-radius: 50%;
             background-color: #000;
             position: relative;
