--- a/src/components/CameraCapture/index.less
+++ b/src/components/CameraCapture/index.less
@@ -51,8 +51,8 @@
 }
 
 .video-container video{
-    width: 100vw;
-    height: 100vh;
+    // width: 100vw;
+    // height: 100vh;
     // object-fit: cover;
 }
 
