--- a/src/App.less
+++ b/src/App.less
@@ -4,9 +4,15 @@
 :root:root {
   --adm-color-primary:  #FA8728;
   --adm-button-border-style: #FA8728;
+  --adm-font-size-main: 1rem;
+  --adm-font-size-2: 1rem;
 }
+@barH: 3.75rem;
 body{
   background-color: #fff;
+}
+.adm-tab-bar-item-icon{
+  height: auto;
 }
 .app {
   height: 100vh;
