--- a/src/App.less
+++ b/src/App.less
@@ -7,12 +7,14 @@
   --adm-font-size-main: 1rem;
   --adm-font-size-2: 1rem;
 }
-@barH: 3.75rem;
 body{
   background-color: #fff;
 }
 .adm-tab-bar-item-icon{
   height: auto;
+}
+.adm-tab-bar-item-title{
+  font-size: .875rem;
 }
 .app {
   height: 100vh;
