--- a/src/pages/Regenerate/index.less
+++ b/src/pages/Regenerate/index.less
@@ -1,6 +1,6 @@
 .regenerate-box{
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     .customSkeleton {
         --width: 60%;
         --height: 40vh;
@@ -9,7 +9,7 @@
       }
     .bg{
         width: 60%;
-        height: 40vh;
+        height: 40dvh;
         display: flex;
         justify-content: center;
         align-items: center;
