--- a/src/pages/Deisgn/index.less
+++ b/src/pages/Deisgn/index.less
@@ -1,6 +1,6 @@
 .deisgn-box{
     width: 100%;
-    height: calc(100vh - 4.79rem);
+    height: calc(100dvh - 4.79rem);
     display: flex;
     flex-direction: column;
     background: #EEF3F5;
