fix:兼容移动端样式

--- a/src/pages/Generate/index.less
+++ b/src/pages/Generate/index.less
@@ -1,9 +1,9 @@
 .generate-box{
     width: 100%;
-    height: 100dvh;
+    height: 100vh;
     .bg{
         width: 60%;
-        height: 40dvh;
+        height: 40vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -13,7 +13,7 @@
     }
     main{
         width: 100%;
-        height: calc(50dvh - 10px);
+        height: calc(50vh - 10px);
         overflow-y: auto;
         .images-box{
             display: grid;
