--- a/src/pages/Generate/index.less
+++ b/src/pages/Generate/index.less
@@ -12,7 +12,7 @@
     }
     main{
         width: 100%;
-        height: calc(50vh - 10px);
+        height: calc(60vh - 5.7737rem);
         overflow-y: auto;
         .images-box{
             display: grid;
