--- a/src/App.less
+++ b/src/App.less
@@ -1,7 +1,6 @@
 #root {
   width: 100%;
   height: 100%;
-  min-height: calc(100vh - 50px);
 }
 :root:root {
   --adm-color-primary:  #FA8728;
@@ -19,6 +18,7 @@ body{
   font-size: .875rem;
 }
 .app {
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
