--- a/src/pages/Regenerate/index.less
+++ b/src/pages/Regenerate/index.less
@@ -1,6 +1,6 @@
 .regenerate-box{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     .customSkeleton {
         --width: 60%;
         --height: 40vh;
