--- a/src/components/CameraCapture/index.less
+++ b/src/components/CameraCapture/index.less
@@ -1,6 +1,6 @@
 .video-container{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: #000;
     display: flex;
     justify-content: center;
@@ -46,7 +46,7 @@
                 z-index: -1;
             }
         }
-
+        
     }
 }
 
