fix:兼容移动端样式

--- a/src/pages/Regenerate/index.less
+++ b/src/pages/Regenerate/index.less
@@ -17,6 +17,9 @@
         overflow: hidden;
         background: #E8E8E8;
     }
+    .check-box-opa{
+        opacity: 0;
+    }
     main{
         width: 100%;
         padding:0 1.25rem;
