--- a/src/pages/Generate/index.less
+++ b/src/pages/Generate/index.less
@@ -1,19 +1,29 @@
 .generate-box{
     width: 100%;
     height: 100%;
-    .bg{
-        width: 60%;
-        height: 40vh;
+    display: flex;
+    flex-direction: column;
+    .header{
+        flex: 1;
         display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: auto;
-        overflow: hidden;
-        background: #E8E8E8;
+        flex-direction: column;
+        .bg{
+            width: 60%;
+            height: 40vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: auto;
+            overflow: hidden;
+            background: #E8E8E8;
+        }
     }
+    
     main{
-        width: 100%;
-        height: calc(60vh - 5.7737rem);
+        
+        flex: 1;
+        // width: 100%;
+        // height: calc(60vh - 5.7737rem);
         overflow-y: auto;
         .images-box{
             display: grid;
