--- a/src/pages/Regenerate/index.less
+++ b/src/pages/Regenerate/index.less
@@ -17,6 +17,9 @@
         overflow: hidden;
         background: #E8E8E8;
     }
+    .check-box-opa{
+        opacity: 0;
+    }
     main{
         width: 100%;
         padding:0 1.25rem;
@@ -46,7 +49,7 @@
                 height: 100%;
             }
         }
-
+        
     }
     footer{
         width: 100%;
